refector:优化代码风格和注释风格